# zero-preprocessor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/example1/: CMakeLists.txt
examples/example1/src/: main.cpp
examples/meta_classes/: CMakeLists.txt
examples/meta_classes/src/: main.cpp
examples/static_reflection/include/: foo.h
examples/static_reflection/src/: main.cpp
include/: detect.hpp  error_reporter.hpp  heap_obj.hpp  overloaded.hpp  preprocessor.h  preprocessor.hpp  result.h  result.hpp  source.h  source.hpp  source_loader.h  source_loader.hpp  std_ast.h  std_ast.hpp  std_helpers.hpp  std_parser.h  std_parser.hpp  std_rules.h  std_rules.hpp  string_utils.hpp
parsers/meta_classes/: meta_classes.h  meta_classes_rules.h
parsers/static_reflection/: static_reflection.h
parsers/static_reflection/out_include/: reflect.h
src/: CMakeLists.txt  ast.h  main.cpp  parser.cpp  preprocessor.cpp  preprocessor.h  source.h  std_ast.h  std_parser.h  std_rules.h  test_std_parser.cpp  test_std_rules.cpp  utils.cmake
tests/: CMakeLists.txt  test_meta_classes_rules.cpp  test_std_parser.cpp  test_std_rules.cpp
